# photo_meta_organizer

./: .gitignore  Makefile  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml
.agent/: rules.md
docs/: user_manual.md
params/examples/: clean_junk.json  fix.json  organize.json  rename.json
src/photo_meta_organizer/: cli.py  config.py
src/photo_meta_organizer/services/: fix_metadata.py  junk_finder.py  organize_photos.py  rename_photos.py
tests/e2e/: test_runner.py
